--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
-        <title>Page not available</title>
+        <title>Coming Soon</title>
 
     </head>
 
