fix some issues

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             	
             <nav>
                 <ul>
-                    <li><a href="http://thuhtoosan.github.io/ths">Home</a></li>
-                    <li><a href="https://github.com/thuhtoosan/ths" target="_blank">View Source Code on Github</a></li>
+                    <li><a href="https://thuhtoosan.github.io">Home</a></li>
+                    <li><a href="https://github.com/thuhtoosan/thuhtoosan.github.io" target="_blank">View Source Code on Github</a></li>
                 </ul>
             </nav>
             <div class="clearfix"></div>
